--- a/_posts/2024-03-17-1ht.markdown
+++ b/_posts/2024-03-17-1ht.markdown
@@ -12,13 +12,13 @@ A short and informal life update: I have made the executive decision to start a 
 I've been intending to start writing for quite a while now. I actually attempted to kick one off earlier this academic year (which lasted for a total of 1 post). One large blocker, which I never overcame previously, was a pressure to put out "polished" content. My mindset this time is that I'm writing this for my own benefit; if others find it interesting, that's a bonus. The other large blocker was a lack of time to focus on what I found important, and moreso trying to figure out what is actually important. Hopefully this time goes different. 
 \
 \
-I recently wrapped up the second quarter of my Master's program at Stanford, and my time here thus far can be characterized by pretty serious burnout, and not adjusting well to the change in environment. I've often found myself comparing the opportunities I've received at Stanford and the hypothetical opportunities I would have received at Berkeley, mainly in terms of work; I havent found nearly as much fulfillment or interest in the research or courses that I've been doing here. It does feel at times that I feel that I'm starting from the bottom of the metaphorical ladder, which is all the more frustrating considering the progress I had made while an undergrad. More importantly, there were threads that needed to be wrapped up at Berkeley, which took much longer because of commitments that I had made at Stanford that didn't align well with what I wanted to do. This is the source of my burnout; I think about work in terms of "effort in, fulfillment out", and for the past few months, this ratio has been very low.
+I recently wrapped up the second quarter of my Master's program at Stanford, and my time here thus far can be characterized by pretty serious burnout, and not adjusting well to the change in environment. I've often found myself comparing the opportunities I've received at Stanford and the hypothetical opportunities I would have received at Berkeley, mainly in terms of work; I haven't found nearly as much fulfillment or interest in the research or courses that I've been doing here. It does feel at times that I feel that I'm starting from the bottom of the metaphorical ladder, which is all the more frustrating considering the progress I had made while an undergrad. More importantly, there were threads that needed to be wrapped up at Berkeley, which took much longer because of commitments that I had made at Stanford that didn't align well with what I wanted to do. This is the source of my burnout; I think about work in terms of "effort in, fulfillment out", and for the past few months, this ratio has been very low.
 \
 \
 Of course, the comparison isn't 1:1; being a grad student is different from being an undergrad, and Berkeley and Palo Alto are very different cities. More importantly, I recognize and continually remind myself about how priveleged I am to have these opportunities. Rather than focusing on what I've lost, I've been making a conscious effort to focus on what I currently have ([literally me](https://www.reddit.com/r/OnePiece/comments/9czqm4/i_still_have_my_friends_colored_panel/)). I've made many amazing friends here, and I feel like my perspectives have shifted a lot thanks to connecting with a lot of new people here, and reconnecting with old friends. Being at Stanford has also necessarily meant being away from Berkeley; I generally subscribe to the notion of "places and spaces" ([here's a quick blog post I found](https://theculturalcourier.home.blog/2019/02/22/everyday-anthropology-space-vs-place/)), and I recognize that I associate Berkeley with a lot of my unhealthy work habits. Something that I'm very happy with over the past few months is that I've improved my work-life balance, exercise habits, and relationships with my Berkeley work and  organizations. Maybe most importantly, taking a Master's program at Stanford has given me the flexibility and time to take a step back, think about what I want to do, and optimize for it. I was reading some applications I wrote to different organizations during my undergrad, and I had described my career goals as "working as a roboticist at a fast startup". Looking back, at Berkeley, I was caught up in the weeds and minutia of grinding out research, to the point where I lost sight of my career goals and was optimizing for something completely different; now, I have an incredible opportunity to do robotics industry research at [1X](https://www.1x.tech/).
 \
 \
-When thinking about choices and regret, the motto I keep is that "the correct choice was the one you made." As a lemma, I generally believe that the most effective and fulfilling way to work is to give one thing your 100% effort. For me, my burnout is characterized as mental friction -- the feeling that something needs to be done, but you don't have the physical, mental, or emotional capacity to do it well. In this case of the past few months, a lot of mental energy was split by juggling threads that needed to be wrapped up at Berkeley (check it out here: [ATM](https://xingyu-lin.github.io/atm/)) and started while here at Stanford. The past few weeks have served as a nice soft mental reset, and I feel like I've correctly re-centered my motivations and commitments. To tie back to my motto, I'm ultimately very happy that I came to Stanford; despite how I've felt over the past few months, I've always felt that coming here was a good choice. If anything, my small regret is that I wasn't fully present mentally to make the most of my time here. I certainly would have been a lot happier with my Berkeley goals if I had stayed at Berkeley, but I recognize that my goals, priorities, and mindset over the past few months have fundamentally changed. I'm very much looking forward to where I'm going to be in the next few months, and giving the next year my 100% effort.
+When thinking about choices and regret, the motto I keep is that "the correct choice was the one you made." As a lemma, I generally believe that the most effective and fulfilling way to work is to give one thing your 100% effort. For me, my burnout is characterized as mental friction -- the feeling that something needs to be done, but you don't have the physical, mental, or emotional capacity to do it well. In this case of the past few months, a lot of mental energy was split by switching context between projects at Berkeley (check it out here: [ATM](https://xingyu-lin.github.io/atm/)) and those started here at Stanford. The past few weeks have served as a nice soft mental reset, and I feel like I've correctly re-centered my motivations and commitments. To tie back to my motto, I'm ultimately very happy that I came to Stanford; despite how I've felt over the past few months, I've always felt that coming here was a good choice. If anything, my small regret is that I wasn't fully present mentally to make the most of my time here. I certainly would have been a lot happier with my Berkeley goals if I had stayed at Berkeley, but I recognize that my goals, priorities, and mindset over the past few months have fundamentally changed. I'm very much looking forward to where I'm going to be in the next few months, and giving the next year my 100% effort.
 \
 \
 Looking forward to seeing this bloom.
