change blog formatting

--- a/_posts/2024-03-17-1ht.markdown
+++ b/_posts/2024-03-17-1ht.markdown
@@ -6,10 +6,10 @@ date:   2024-03-17 13:32:03 -0700
 categories: jekyll update
 
 ---
-A short and informal life update: I have made the executive decision to start a blog! I mainly want to run this as a combination of a research journal, readings, and thoughts as they come up. The past few months have really changed how I view the world and myself, and I want to capture the metamorphosis of my thoughts as they happen. 
+A short and informal life update: I have made the executive decision to start a blog! I mainly want to run this as a combination of a research journal, readings, and thoughts as they come up. The past few months have really changed how I view the world and myself, and I want to capture the metamorphosis of my thoughts as they happen.
 \
 \
-I've been intending to start writing for quite a while now. I actually attempted to kick one off earlier this academic year (which lasted for a total of 1 post). One large blocker, which I never overcame previously, was a pressure to put out "polished" content. My mindset this time is that I'm writing this for my own benefit; if others find it interesting, that's a bonus. The other large blocker was a lack of time to focus on what I found important, and moreso trying to figure out what is actually important. Hopefully this time goes different. 
+I've been intending to start writing for quite a while now. I actually attempted to kick one off earlier this academic year (which lasted for a total of 1 post). One large blocker, which I never overcame previously, was a pressure to put out "polished" content. My mindset this time is that I'm writing this for my own benefit; if others find it interesting, that's a bonus. Specifically, for these _one hour thoughts_ posts, I'll be writing for one hour, do minor edits, and then publish them as they are. The other large blocker was a lack of time to focus on what I found important, and moreso trying to figure out what is actually important. Hopefully this time goes different. 
 \
 \
 I recently wrapped up the second quarter of my Master's program at Stanford, and my time here thus far can be characterized by pretty serious burnout, and not adjusting well to the change in environment. I've often found myself comparing the opportunities I've received at Stanford and the hypothetical opportunities I would have received at Berkeley, mainly in terms of work; I haven't found nearly as much fulfillment or interest in the research or courses that I've been doing here. It does feel at times that I feel that I'm starting from the bottom of the metaphorical ladder, which is all the more frustrating considering the progress I had made while an undergrad. More importantly, there were threads that needed to be wrapped up at Berkeley, which took much longer because of commitments that I had made at Stanford that didn't align well with what I wanted to do. This is the source of my burnout; I think about work in terms of "effort in, fulfillment out", and for the past few months, this ratio has been very low.
