--- a/_posts/2024-03-17-1ht.markdown
+++ b/_posts/2024-03-17-1ht.markdown
@@ -21,7 +21,7 @@ Of course, the comparison isn't 1:1; Berkeley is a different environment compare
 Maybe most importantly, taking a Master's program at Stanford has given me the time and flexibility to take a step back, think about what I want to do, and optimize for it. I was reading some applications I wrote to different organizations during my sophomore year of undergrad, and I had described my career goals as "deploying robots in the real world". Now, I've found an incredible opportunity to do this as an intern on the AI team at [1X](https://www.1x.tech/), a fast-paced robotics startup which develops data-driven humanoid robots. Looking back, during my time as a Berkeley undergrad, I became caught up in the weeds and minutia of grinding out research to the point where I lost sight of my big-picture career goals; I couldn't consider doing anything other than academic research. Coming to Stanford (moreso taking a step away from the _place_ I had created at Berkeley) has given me a chance to re-evaluate my goals and consider different options. I've come to a conclusion similar to "all roads lead to Rome": academic research is just one way, and definitely not the only way, to make a meaningful impact in robotics. I'm a strong believer in the perspective and growth gained from a breadth of different experiences; I'm sure that my experiences in academia will transfer well into my time at 1X, just as the experience that I will gain at 1X will transfer into future academic research work.
 \
 \
-When thinking about choices and regret, the motto I keep is that "the correct choice was the one you made." As a lemma, I generally believe that the most effective and fulfilling way to work is to give one thing your 100% effort. I personally characterize my burnout as mental friction -- the feeling that something needs to be done, but you don't have the physical, mental, or emotional capacity to do it well. In this case of the past few months, a lot of mental energy was split by switching context between my projects at Berkeley (check it out here: [ATM](https://xingyu-lin.github.io/atm/)) and those started here at Stanford. The past few weeks have served as a nice soft mental reset, and I feel like I've correctly re-centered my motivations and commitments. To circle back to the motto mentioned above, I'm ultimately very happy that I came to Stanford; despite how I've felt over the past few months, I've always felt that coming here was a good choice. If anything, my small regret is that I wasn't fully present mentally to make the most of my time here thus far. I certainly would have been a lot happier with my Berkeley goals if I had stayed at Berkeley, but I recognize that my goals, priorities, and mindset over the past few months have fundamentally changed. I'm very much looking forward to making the most out of 1X over the couple months, and giving my endeavors in the coming year my 100% effort.
+When thinking about decisions and regret, the motto I keep is that "the correct choice was the one you made." As a lemma, I generally believe that the most effective and fulfilling way to work is to give one thing your 100% effort. I personally characterize my burnout as mental friction -- the feeling that something needs to be done, but you don't have the physical, mental, or emotional capacity to do it well. In this case of the past few months, a lot of mental energy was split by switching context between my projects at Berkeley (check it out here: [ATM](https://xingyu-lin.github.io/atm/)) and those started here at Stanford. The past few weeks have served as a nice soft mental reset, and I feel like I've correctly re-centered my motivations and commitments. To circle back to the motto mentioned above, I'm ultimately very happy that I came to Stanford; despite how I've felt over the past few months, I've always felt that coming here was a good choice. If anything, my small regret is that I wasn't fully present mentally to make the most of my time here thus far. I certainly would have been a lot happier with my Berkeley goals if I had stayed at Berkeley, but I recognize that my goals, priorities, and mindset over the past few months have fundamentally changed. I'm very much looking forward to making the most out of 1X over the couple months, and giving my endeavors in the coming year my 100% effort.
 \
 \
 Hopefully this time goes different. Looking forward to seeing this bloom.
